WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 55251
On Mac, need to remove misspell underline in Editor::learnSpelling().
https://bugs.webkit.org/show_bug.cgi?id=55251
Summary
On Mac, need to remove misspell underline in Editor::learnSpelling().
Jia Pu
Reported
2011-02-25 12:27:10 PST
In some version of Mac OS X, the red misspell underline persists after user has chosen "Learn Spelling" in contextual menu. <
rdar://problem/8676782
>
Attachments
Proposed patch (v1)
(1.69 KB, patch)
2011-02-25 14:25 PST
,
Jia Pu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jia Pu
Comment 1
2011-02-25 14:25:24 PST
Created
attachment 83874
[details]
Proposed patch (v1)
mitz
Comment 2
2011-02-25 14:37:55 PST
Comment on
attachment 83874
[details]
Proposed patch (v1) View in context:
https://bugs.webkit.org/attachment.cgi?id=83874&action=review
Not changing to cq+ because you may want to clarify the comment.
> Source/WebCore/editing/Editor.cpp:1771 > + // FIXME: On Mac OS X, when use "learn" button on "Spelling and Grammar" panel, we don't call this function. It should remove misspelling markers around the learned word, see <
rdar://problem/5396072
>.
Seems like the second sentence in the comment isn’t needed anymore, because now the function does what it should do.
WebKit Commit Bot
Comment 3
2011-02-26 07:48:36 PST
Comment on
attachment 83874
[details]
Proposed patch (v1) Clearing flags on attachment: 83874 Committed
r79790
: <
http://trac.webkit.org/changeset/79790
>
WebKit Commit Bot
Comment 4
2011-02-26 07:48:41 PST
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 5
2011-02-26 07:54:20 PST
The commit-queue encountered the following flaky tests while processing
attachment 83874
[details]
: fast/dom/onerror-img.html
bug 51019
The commit-queue is continuing to process your patch.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug