2011-02-26  Jia Pu  <jpu@apple.com>

Reviewed by Dan Bernstein.

        On Mac, need to remove misspell underline in Editor::learnSpelling().
        https://bugs.webkit.org/show_bug.cgi?id=55251

        This change makes sure that the misspelling markers are removed after the word is learned.

        * editing/Editor.cpp:
        (WebCore::Editor::learnSpelling):

Canonical link: https://commits.webkit.org/69707@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79790 268f45cc-cd09-0410-ab3c-d52691b4dbfc